--- a/about.html
+++ b/about.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Basic -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- Mobile Metas -->
+    <!-- Mobile Meta -->
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <!-- Site Metas -->
+    <!-- Site Meta -->
     <meta
       name="keywords"
       content="Home Services Repair Restoration Maintenance Fix House Alabama"
@@ -43,13 +42,13 @@
         <div class="header_top">
           <div class="container-fluid">
             <div class="contact_nav">
-                <a href="tel:205-777-7271">
-                  <i class="fa fa-phone" aria-hidden="true"></i>
-                  <span> Call : 205-777-7271 </span>
-                </a>
-                <a href="mailto:divinehomesservices@outlook.com">
-                  <i class="fa fa-envelope" aria-hidden="true"></i>
-                  <span> Email : divinehomesservices@outlook.com </span>
+              <a href="tel:205-777-7271">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+                <span> Call : 205-777-7271 </span>
+              </a>
+              <a href="mailto:divinehomesservices@outlook.com">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+                <span> Email : divinehomesservices@outlook.com </span>
               </a>
             </div>
           </div>
@@ -76,9 +75,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html"
-                      >Home <span class="sr-only">(current)</span></a
-                    >
+                    <a class="nav-link" href="index.html">Home </a>
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="about.html"> About</a>
@@ -107,7 +104,9 @@
             <div class="detail-box">
               <h2>About us</h2>
               <p>
-                Divine Homes Services is a Home Repair business based in Calera, Alabama that focuses on repairing homes as well as smaller commercial and community projects.
+                Divine Homes Services is a Home Repair business based in Calera,
+                Alabama that focuses on repairing homes as well as smaller
+                commercial and community projects.
               </p>
               <a href="service.html"> Services </a>
             </div>
@@ -123,18 +122,29 @@
             <div class="detail-box">
               <h2>South Birmingham</h2>
               <p>
-                We are based in Calera Alabaster, so we serve the surrounding areas: Hoover, Indian Springs Village, Bessemer, Helena, Pelham, Alabaster, Clanton, Montevallo, Columbiana, Jemison, Thorsby, and neighboring areas. Please contact us to see if we can serve you.
+                We are based in Calera Alabaster, so we serve the surrounding
+                areas: Hoover, Indian Springs Village, Bessemer, Helena, Pelham,
+                Alabaster, Clanton, Montevallo, Columbiana, Jemison, Thorsby,
+                and neighboring areas. Please contact us to see if we can serve
+                you.
               </p>
               <a href="contact.html"> Contact </a>
             </div>
           </div>
           <div class="col-lg-7 col-md-6">
             <div class="img-box">
-              <iframe title="Google Maps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d359485.1627163707!2d-86.6506130099684!3d33.16611625039154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1738944493298!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe
+                title="Google Maps"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d359485.1627163707!2d-86.6506130099684!3d33.16611625039154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1738944493298!5m2!1sen!2sus"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
             </div>
           </div>
-
-          
         </div>
       </div>
     </section>
