--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Basic -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- Mobile Metas -->
+    <!-- Mobile Meta -->
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <!-- Site Metas -->
+    <!-- Site Meta -->
     <meta
       name="keywords"
       content="Home Services Repair Restoration Maintenance Fix House Alabama"
@@ -32,7 +31,7 @@
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- responsive style CSS -->
-    <link rel="stylesheet" href="css/responsive.css"/>
+    <link rel="stylesheet" href="css/responsive.css" />
 
     <!-- Scripts: Utilities -->
     <script defer src="/js/scripts.js"></script>
@@ -81,9 +80,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                   <li class="nav-item active">
-                    <a class="nav-link" href="index.html"
-                      >Home <span class="sr-only">(current)</span></a
-                    >
+                    <a class="nav-link" href="index.html">Home </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="about.html"> About</a>
@@ -213,7 +210,7 @@
           <div class="col-sm-6 col-md-4 mx-auto">
             <div class="box">
               <div class="img-box">
-                <img src="icons/s2.png" alt="" />
+                <img src="icons/plug.png" alt="" />
               </div>
               <div class="detail-box">
                 <h5>Electrical</h5>
@@ -224,7 +221,7 @@
           <div class="col-sm-6 col-md-4 mx-auto">
             <div class="box">
               <div class="img-box">
-                <img src="icons/s3.png" alt="" />
+                <img src="icons/sink.png" alt="" />
               </div>
               <div class="detail-box">
                 <h5>Plumbing</h5>
@@ -363,7 +360,7 @@
     <!-- end client section -->
 
     <!-- Contact Form -->
-    <section class="contact_section layout_padding" >
+    <section class="contact_section layout_padding">
       <div class="container">
         <div class="heading_container">
           <h2>Contact Us</h2>
@@ -372,28 +369,58 @@
           <div class="col-md-6">
             <form action="" id="contactForm">
               <div>
-                <input type="text" placeholder="Name" id="name" name="from_name" />
+                <input
+                  type="text"
+                  placeholder="Name"
+                  id="name"
+                  name="from_name"
+                />
               </div>
               <div>
-                <input type="text" placeholder="Phone Number" id="phone" name="phone_number" required/>
+                <input
+                  type="text"
+                  placeholder="Phone Number"
+                  id="phone"
+                  name="phone_number"
+                  required
+                />
               </div>
               <div>
-                <input type="email" placeholder="Email" id="email" name="email" required/>
+                <input
+                  type="email"
+                  placeholder="Email"
+                  id="email"
+                  name="email"
+                  required
+                />
               </div>
               <div>
-                <input type="text" placeholder="Message" id="message" name="message" class="message-box" />
+                <input
+                  type="text"
+                  placeholder="Message"
+                  id="message"
+                  name="message"
+                  class="message-box"
+                />
               </div>
               <div class="d-flex">
-                <button
-                id="submit"
-                type="submit">SEND</button>
+                <button id="submit" type="submit">SEND</button>
               </div>
             </form>
           </div>
           <div class="col-md-6">
             <div class="map_container">
               <div class="map">
-                <iframe title="Google Maps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d359485.1627163707!2d-86.6506130099684!3d33.16611625039154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1738944493298!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                  title="Google Maps"
+                  src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d359485.1627163707!2d-86.6506130099684!3d33.16611625039154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1738944493298!5m2!1sen!2sus"
+                  width="600"
+                  height="450"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
             </div>
           </div>
@@ -479,5 +506,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="js/custom.js"></script>
   </body>
-
 </html>
