--- a/service.html
+++ b/service.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Basic -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- Mobile Metas -->
+    <!-- Mobile Meta -->
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <!-- Site Metas -->
+    <!-- Site Meta -->
     <meta
       name="keywords"
       content="Home Services Repair Restoration Maintenance Fix House Alabama"
@@ -76,9 +75,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html"
-                      >Home <span class="sr-only">(current)</span></a
-                    >
+                    <a class="nav-link" href="index.html">Home </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="about.html"> About</a>
@@ -109,29 +106,35 @@
           <div class="col-sm-6 col-md-4 mx-auto">
             <div class="box">
               <div class="img-box">
-                <img src="icons/s1.png" alt="" />
+                <img src="icons/floor.png" alt="floor" />
               </div>
               <div class="detail-box">
-                <h5>Maintenance</h5>
-                <p>Keep your home running smoothly with regular maintenance.</p>
+                <h5>Flooring</h5>
+                <p>
+                  Fix or replace any flooring to enhance your home's looks and
+                  functionality.
+                </p>
               </div>
             </div>
           </div>
           <div class="col-sm-6 col-md-4 mx-auto">
             <div class="box">
               <div class="img-box">
-                <img src="icons/s2.png" alt="" />
+                <img src="icons/plug.png" alt="electrical" />
               </div>
               <div class="detail-box">
                 <h5>Electrical</h5>
-                <p>Safe and reliable electrical services you can trust.</p>
+                <p>
+                  Trust our safe and reliable electrical services to ensure your
+                  home runs efficiently.
+                </p>
               </div>
             </div>
           </div>
           <div class="col-sm-6 col-md-4 mx-auto">
             <div class="box">
               <div class="img-box">
-                <img src="icons/s3.png" alt="" />
+                <img src="icons/sink.png" alt="sink" />
               </div>
               <div class="detail-box">
                 <h5>Plumbing</h5>
@@ -143,22 +146,26 @@
             </div>
           </div>
         </div>
+        <!-- 2nd row -->
         <div class="row">
           <div class="col-sm-6 col-md-4 mx-auto">
             <div class="box">
               <div class="img-box">
-                <img src="icons/home.svg" alt="" />
+                <img src="icons/drywall.png" alt="drywall" />
               </div>
               <div class="detail-box">
                 <h5>Drywall</h5>
-                <p>We can fix any drywall damage and make walls look like new.</p>
+                <p>
+                  Repair any drywall damage and rejuvenate your walls to look as
+                  good as new.
+                </p>
               </div>
             </div>
           </div>
           <div class="col-sm-6 col-md-4 mx-auto">
             <div class="box">
               <div class="img-box">
-                <img src="icons/paint.svg" alt="" />
+                <img src="icons/paint.svg" alt="paint" />
               </div>
               <div class="detail-box">
                 <h5>Paint</h5>
@@ -169,13 +176,52 @@
           <div class="col-sm-6 col-md-4 mx-auto">
             <div class="box">
               <div class="img-box">
-                <img src="icons/tools.svg" alt="" />
+                <img src="icons/tools.svg" alt="tools" />
               </div>
               <div class="detail-box">
                 <h5>Custom jobs</h5>
                 <p>
-                  Custom requests are welcomed. Let's figure out a solution for you.
+                  Custom requests are welcomed. We tailor solutions for your
+                  needs.
                 </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- 3rd row -->
+        <div class="row">
+          <div class="col-sm-6 col-md-4 mx-auto">
+            <div class="box">
+              <div class="img-box">
+                <img src="icons/tileFloor.png" alt="drywall" />
+              </div>
+              <div class="detail-box">
+                <h5>Tile</h5>
+                <p>We expertly install tile on both floors and walls.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 mx-auto">
+            <div class="box">
+              <div class="img-box">
+                <img src="icons/bathroom.png" alt="paint" />
+              </div>
+              <div class="detail-box">
+                <h5>Bathroom</h5>
+                <p>
+                  We can renew bathrooms into functional and beautiful spaces.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 mx-auto">
+            <div class="box">
+              <div class="img-box">
+                <img src="icons/kitchen.png" alt="tools" />
+              </div>
+              <div class="detail-box">
+                <h5>Kitchen</h5>
+                <p>We can renew kitchens to create your dream cooking space.</p>
               </div>
             </div>
           </div>
